--- a/GlookoApp/app/build.gradle
+++ b/GlookoApp/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
     compile 'com.google.code.gson:gson:2.3'
+    compile 'com.github.spyhunter99:super-tooltip-aar:4.0.0'
 }
